--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,8 @@
 name: Deploy Astro site to GitHub Pages
 
 on:
-  # Triggers the workflow on push to the main branch
   push:
     branches: ["main"]
-
-  # Allows you to manually run this workflow from the Actions tab
   workflow_dispatch:
 
 permissions:
@@ -21,7 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout your repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -33,10 +30,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build the site
+      - name: Build site
         run: npm run build
 
-      - name: Upload production-ready site
+      - name: Add .nojekyll
+        run: touch dist/.nojekyll
+
+      - name: Upload site
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
